# rk3588_mmrehab

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  readme.md  requirements-optional.txt  requirements.txt  result_storage.py  rknn_rtmdet_rtmpose_demo.py  rtmdet_rtmpose_demo.py
action_feedback/: README.md  __init__.py  rule_engine.py
action_scoring/: README.md  __init__.py  check_dataset.py  completion_calibrator.py  dataset.py  export_onnx.py  export_rknn.py  features.py  infer_onnx.py  infer_rknn.py  labels.py  model.py  registry.py  service.py  train.py
analyze/: llm_report_generator.py
api_use/: README.md  glm4v_rehab_camera.py  requirements-glm4v.txt
configs/: rtmdet_l_8xb32-300e_coco.py  rtmpose-l_simcc-body7_420e-384x288.py
data/: README.md
docs/: GLM readme.md  README.md  architecture.md  asr_paraformer_fp32_upgrade_guide.md  cpu_quality_scoring_for_codex.md  llm.md  medical_rehab_actions.md  natural_tts_and_playlist_guide.md  newcomer_rtmpose_fixed_quickstart.md  npu_quality_scoring_for_beginners.md  npu_rehab_8085_guide.md  offline_closed_loop_demo.md  quality_scoring_voice_assistant_zh.md  rehab_data_storage_guide.md  rk3588_hdmi_8082_browser_guide.md  rk3588_npu_defense_notes_zh.md  rk3588_qwen_rkllm_rknn_conversion_guide.md  rknn_pose_deployment_plan.md  rknn_pose_npu_integration_plan.md  rknn_pose_npu_usage.md  rknn_yolov8_pose_smoke_test.md  rtmdet_rtmpose_npu_usage.md  technical_overview_zh.md  unified_training_station.md  yolov8_pose_npu_usage.md  动作质量评分及语音交互助手.md
evaluate/: README.md  __init__.py  (+1 more)
(+292 files in other folders)
